--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="r.png" target="_blank" class="download-button">Download CV</a>
+            <a href="Resume.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
@@ -202,4 +202,5 @@
     </script>
 </body>
 </html>
+
 
